--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "aws-sdk": "^2.943.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
+    "element-plus": "^1.0.2-beta.55",
     "pg-hstore": "^2.3.4",
+    "rxjs": "^7.2.0",
     "sequelize": "^6.6.5",
+    "serialport": "^9.2.0",
     "sqlite3": "5.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
